[package]
name = "fhew"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fftw = { version = "*" }
ndarray = { version = "*" }
num = { version = "*" }
rand = { version = "*" }
strum = { version = "*" }